Frontend/src/components/Icons/iconStyles.css
.icon-container {
  flex-shrink: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 1.1rem;
  aspect-ratio: 1/1;
  border-radius: 100%;
  position: relative;

  svg {
    position: absolute;
    width: 100%;
  }

  &.ok {
    background-color: var(--ok);

    svg {
      width: 60%;
    }
  }
  &.warning {
    background-color: var(--warning);

    svg {
      width: 60%;
    }
  }

  &.close {
    justify-self: end;
    cursor: pointer;

    path {
      fill: var(--close);
      transition: fill var(--transition-fast);
    }

    &.close:hover path {
      fill: var(--close-hover);
    }
  }

  &.caret-down {
    svg {
      width: 80%;
    }
  }
}

.icon-avatar {
  border-radius: 100%;
  overflow: hidden;
  width: 100%;
  aspect-ratio: 1/1;
  max-width: 2.5rem;
}

